--- a/index_second.html
+++ b/index_second.html
@@ -46,15 +46,17 @@ body,html{
 	  	<!-- <div id="menu_0" class="menu" style="position:absolute; top:31px; left:287px; width:126px; height:55px;line-height: 55px;"></div> -->
 	</div>
 
-	<div id="menu_focus" style="position:absolute; top:26px; left:273px; width:157px; height:66px; background:url(images_second/menu-on.png) no-repeat; opacity:0;z-index:2;">
-
-	</div>
+	<!-- <div id="menu_focus" style="position:absolute; top:26px; left:273px; width:157px; height:66px; background:url(images_second/menu-on.png) no-repeat; opacity:0;z-index:2;"></div> -->
+	<div id="menu_focus" style="position:absolute; top:31px; left:273px; width:149px; height:50px; border:4px #ffffff solid; border-radius: 30px; opacity:0;z-index:2;"></div>
 	
 </div>
 
 <div id="content" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;"></div>
 
-<div id="content_focus" class="smooth" style="position:absolute; top:0px; left:-10px; width:179px; height:138px; z-index:5; opacity:0;visibility: hidden;  border:4px #ffffff solid; transform: scale(1.08,1.08); -webkit-transform: scale(1.08,1.08);">
+<!-- <div id="content_focus" class="smooth" style="position:absolute; top:0px; left:-10px; width:179px; height:138px; z-index:5; opacity:0;visibility: hidden;  border:4px #ffffff solid; transform: scale(1.08,1.08); -webkit-transform: scale(1.08,1.08);">
+</div> -->
+
+<div id="content_focus" class="smooth" style="position:absolute; top:0px; left:0px; width:179px; height:138px; z-index:5; opacity:0;visibility: hidden;  border:4px #ffffff solid; transform: scale(1.08,1.08); -webkit-transform: scale(1.08,1.08);">
 </div>
 
 
