--- a/topList_second.html
+++ b/topList_second.html
@@ -51,6 +51,21 @@ body,html{
 	
 </div>
 
+<!-- 左边菜单 -->
+<div id="MenuLeft" style="position:absolute; top:0px; left:0px; width:1280px; height:120px;">
+	
+	<!--<img src="images/happyclass/logo/h1.png"style="position: absolute;top: 24px;left: 120px;"/> menu的菜单栏为图片-->
+
+	<div id="menuLeft_content" style="position: absolute;top: 0px;left: 0px;width: 1280px;height: 720px;">
+	  	<!-- <div id="menuLeft_0" class="menu" style="position:absolute; top:31px; left:287px; width:126px; height:55px;line-height: 55px;"></div> -->
+	</div>
+
+	<!-- <div id="menu_focus" style="position:absolute; top:26px; left:273px; width:157px; height:66px; background:url(images_second/menu-on.png) no-repeat; opacity:0;z-index:2;"></div> -->
+	<!-- <div style="position:absolute;top:113px; left:42px;"><div id="menuLeft_focus" style="position:absolute; top:0px; left:0px; width:199px; height:139px;background: url(images_second/left_menu_on.png) left top no-repeat; opacity:0;z-index:2;"></div></div> --><!-- left_menu_bg -->
+	<div style="position:absolute;top:150px; left:80px;"><div id="menuLeft_focus" style="position:absolute; top:0px; left:0px; width:115px; height:55px;opacity:0;border:4px #ffffff solid; border-radius: 10px;z-index:3;"></div></div>
+	
+</div>
+
 
 <!-- 右边内容 begin -->
 
@@ -76,6 +91,8 @@ body,html{
 <img style="position:absolute;left:60px;top:368px;opacity: 0;" src="./images_second/arrow_left.png" id="contentArrowLeft" />
 <img style="position:absolute;left:1195px;top:368px;opacity: 0;" src="./images_second/arrow_right.png" />
 <img style="position:absolute;left:1195px;top:368px;opacity: 0;" src="./images_second/arrow_right.png" id="contentArrowRight" />
+<img style="position:absolute;left:695px;top:170px;z-index: 5;" src="./images_second/arrow_up.png" id="contentArrowUp" />
+<img style="position:absolute;left:695px;top:670px;z-index: 5;" src="./images_second/arrow_down.png" id="contentArrowDown" />
 
 <!-- 右边内容 end -->
 
