--- a/live_second.html
+++ b/live_second.html
@@ -21,7 +21,7 @@ body,html{
 
 	<div id="loadingDiv" style="position:absolute; top:250px; left:500px; width:334px; height:122px; z-index:10;background: url(images_second/loading_bg.png) left top no-repeat; visibility:hidden;">
 		<!-- <img src="./images_second/loading_bg.png" style="position:absolute; top:0px; left:0px;background: transparent;" /> -->
-		<div style="line-height: 122px;color: #ffffff;font-size: 26px;text-align: center;">加载中...</div>
+		<div style="line-height: 122px;color: #ffffff;font-size: 26px;text-align: center;"><img src="images_second/loading.gif" style="vertical-align: middle;" /> <span style="padding: 0px 10px;">加载中...</span></div>
 	</div>
 
 
