--- a/schedule_second.html
+++ b/schedule_second.html
@@ -88,8 +88,8 @@ body,html{
 <img style="position:absolute;left:60px;top:368px;opacity: 0;" src="./images_second/arrow_left.png" id="contentArrowLeft" />
 <img style="position:absolute;left:1195px;top:368px;opacity: 0;" src="./images_second/arrow_right.png" />
 <img style="position:absolute;left:1195px;top:368px;opacity: 0;" src="./images_second/arrow_right.png" id="contentArrowRight" />
-<img style="position:absolute;left:695px;top:170px;z-index: 5;" src="./images_second/arrow_up.png" id="contentArrowUp" />
-<img style="position:absolute;left:695px;top:670px;z-index: 5;" src="./images_second/arrow_down.png" id="contentArrowDown" />
+<img style="position:absolute;left:695px;top:170px;z-index: 5;display: none;" src="./images_second/arrow_up.png" id="contentArrowUp" />
+<img style="position:absolute;left:695px;top:670px;z-index: 5;display: none;" src="./images_second/arrow_down.png" id="contentArrowDown" />
 
 <!-- 右边内容 end -->
 
