--- a/index_second.html
+++ b/index_second.html
@@ -51,7 +51,8 @@ body,html{
 	
 </div>
 
-<div id="content" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;"></div>
+<div style="position: absolute;top: 458px;left: 70px;width: 566px;height: 162px;background: url(./images_second/index_word_item_bg.png) no-repeat;"></div>
+<div id="content" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;z-index: 2;"></div>
 
 <!-- <div id="content_focus" class="smooth" style="position:absolute; top:0px; left:-10px; width:179px; height:138px; z-index:5; opacity:0;visibility: hidden;  border:4px #ffffff solid; transform: scale(1.08,1.08); -webkit-transform: scale(1.08,1.08);">
 </div> -->
