绑定数据第一天

--- a/ownList_second.html
+++ b/ownList_second.html
@@ -33,7 +33,7 @@ body,html{
 <!-- <div id="loadingDiv" class="smooth" style="position:absolute; top:320px; left:600px; width:139px; height:139px; z-index:10; visibility:hidden;">
 	<img src="./images/loading.gif" style="position:absolute; top:0px; left:0px;background: transparent;" />
 </div> -->
-<img src="./images_second/list1/logo.png" style="position:absolute; top:38px; left:65px;" />
+<img id="ownLogo" src="./images_second/list1/logo.png" style="position:absolute; top:38px; left:65px;" />
 
 <!-- 左边菜单 -->
 <div id="MenuLeft" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;">
