--- a/ownList_second.html
+++ b/ownList_second.html
@@ -57,7 +57,7 @@ body,html{
 <!-- <img style="position: absolute;z-index: 1;left: 223px;top: 107px;" src="./images_second/topList_bg.png" /> -->
 <div id="contentWrapper" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;">
 	
-	<div style="position:absolute;top:96px;left:320px;width:277px;height:174px;display:block;">
+	<div style="position:absolute;top:96px;left:320px;width:277px;height:174px;display:none;">
 		<div style="width:277px;height:174px;overflow:hidden;"><img src="./images_second/list1/list_img.png" width="277" /></div>
 
 		<div id="listItemTextMask0" style="width:277px;height:39px;line-height:39px;font-size:18px;position:absolute;left:0px;top:135px;background:url(./images_second/list1/text_bg.png);color:#ffffff;overflow:hidden;">
