--- a/schedule_second.html
+++ b/schedule_second.html
@@ -72,7 +72,7 @@ body,html{
 <!-- <img style="position: absolute;z-index: 1;left: 223px;top: 107px;" src="./images_second/topList_bg.png" /> -->
 <div id="contentWrapper" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;">
 	
-	<div style="position:absolute;z-index:2;top:120px;left:223px;width:990px;height:90px;display:block;background: url(images_second/schedule_bg.png) no-repeat;">
+	<div style="position:absolute;z-index:2;top:120px;left:223px;width:990px;height:90px;display:none;background: url(images_second/schedule_bg.png) no-repeat;">
 		<div id="listItemFocus0" class="smooth" style="position:absolute; top:-42px; left:-34px; width:1057px; height:173px; z-index:2; display:block;opacity:1;visibility: visible; background: url(images_second/schedule_bg_on.png) no-repeat;"></div>
 		<div style="position: absolute;height: 90px;line-height: 90px;color: #ffffff;font-size: 24px;width: 80px;left:0px;top: 0px;text-align: center;z-index: 3;overflow: hidden;">1</div>
 		<div style="position: absolute;height: 90px;line-height: 90px;color: #ffffff;font-size: 24px;width: 250px;left:80px;top: 0px;text-align: center;z-index: 3;overflow: hidden;">
