--- a/topList_second.html
+++ b/topList_second.html
@@ -71,11 +71,11 @@ body,html{
 
 <img style="position: absolute;z-index: 1;left: 223px;top: 107px;" src="./images_second/topList_bg.png" />
 <div id="contentWrapper" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;">
-	<div style="position: absolute;z-index: 2;top: 107px;left: 223px;width: 990px;height: 66px;">
+	<div style="position: absolute;z-index: 2;top: 107px;left: 223px;width: 990px;height: 66px;display:none;">
 		<div style="position: absolute;height: 66px;line-height: 66px;color: #a2abdf;font-size: 24px;width: 80px;left:0px;top: 0px;text-align: center;">排名</div>
 		<div style="position: absolute;height: 66px;line-height: 66px;color: #a2abdf;font-size: 24px;width: 250px;left:80px;top: 0px;text-align: center;">球队</div>
 	</div>
-	<div style="position:absolute;z-index:2;top:173px;left:223px;width:990px;height:50px;display:block;">
+	<div style="position:absolute;z-index:2;top:173px;left:223px;width:990px;height:50px;display:none;">
 		<div id="listItemFocus0" class="smooth" style="position:absolute; top:-2px; left:-2px; width:990px; height:50px; z-index:2; display:block;opacity:1;visibility: visible;  border:2px #ffffff solid; background: url(images_second/topList_bg_on.png) no-repeat;"></div>
 		<div style="position: absolute;height: 50px;line-height: 50px;color: #ffffff;font-size: 24px;width: 80px;left:0px;top: 0px;text-align: center;z-index: 3;overflow: hidden;">1</div>
 		<div style="position: absolute;height: 50px;line-height: 50px;color: #ffffff;font-size: 24px;width: 250px;left:80px;top: 0px;text-align: center;z-index: 3;overflow: hidden;">
