--- a/matchCollection_second.html
+++ b/matchCollection_second.html
@@ -55,7 +55,7 @@ body,html{
 <!-- 右边内容 begin -->
 
 <div id="contentWrapper" style="position:absolute; top:0px; left:0px; width:1280px; height:720px;">
-	<div style="position:absolute;top:133px;left:103px;width:333px;height:237px;display:block;">
+	<div style="position:absolute;top:133px;left:103px;width:333px;height:237px;display:none;">
 		<div style="width:333px;height:187px;overflow:hidden;"><img src="./images_second/lookBack_img1.png" width="333" /></div>
 
 		<div id="listItemTextMask0" style="width:333px;height:50px;line-height:50px;font-size:20px;position:absolute;left:0px;top:187px;background:url(./images_second/lookBack_word_bg.png);color:#a2a9c6;overflow:hidden;">
