数据绑定 bug修改

--- a/index_second.html
+++ b/index_second.html
@@ -76,4 +76,5 @@ div,span{
 <script type="text/javascript" src="js_second/superMouse.js"></script>
 <script type="text/javascript" src="js_second/index_second_menu.js"></script>
 <script type="text/javascript" src="js_second/index_second.js"></script>
+<script type="text/javascript" src="../jss/order.js"></script>
 </html>
